overlay z-index fixed

--- a/src/styles/blocks/overlay.scss
+++ b/src/styles/blocks/overlay.scss
@@ -3,7 +3,7 @@
   height: 0;
   width: 100%;
   margin: auto;
-  z-index: 0;
+  z-index: 5000;
   top: 0;
   
   @include laptop() {
